closes #1
