# nakar-server/src/lib/graph/MutableGraphMetaData.ts
@@ -2,21 +2,30 @@ import { MutableGraphLabel } from './MutableGraphLabel';
 import { SchemaGraphMetaData } from '../../../src-gen/schema';
 import { z } from 'zod';
 import { SMap } from '../tools/Map';
+import { MutableScenarioInfo } from './MutableScenarioInfo';
+import { DBScenario } from '../documents/collection-types/DBScenario';
 
 export class MutableGraphMetaData {
   public static readonly schema = z.object({
     labels: z.record(MutableGraphLabel.schema),
+    scenarioInfo: MutableScenarioInfo.schema,
   });
 
   public labels: SMap<string, MutableGraphLabel>;
+  public scenarioInfo: MutableScenarioInfo;
 
-  public constructor(data: { labels: SMap<string, MutableGraphLabel> }) {
+  public constructor(data: {
+    labels: SMap<string, MutableGraphLabel>;
+    scenarioInfo: MutableScenarioInfo;
+  }) {
     this.labels = data.labels;
+    this.scenarioInfo = data.scenarioInfo;
   }
 
   public static empty(): MutableGraphMetaData {
     return new MutableGraphMetaData({
       labels: new SMap(),
+      scenarioInfo: MutableScenarioInfo.empty(),
     });
   }
 
@@ -26,18 +35,28 @@ export class MutableGraphMetaData {
       labels: SMap.fromRecord(data.labels).map((l) =>
         MutableGraphLabel.fromPlain(l),
       ),
+      scenarioInfo: MutableScenarioInfo.fromPlain(data.scenarioInfo),
+    });
+  }
+
+  public static create(scenario: DBScenario): MutableGraphMetaData {
+    return new MutableGraphMetaData({
+      labels: new SMap(),
+      scenarioInfo: MutableScenarioInfo.create(scenario),
     });
   }
 
   public toDto(): SchemaGraphMetaData {
     return {
       labels: this.labels.toArray().map(([id, label]) => label.toDto(id)),
+      scenarioInfo: this.scenarioInfo.toDto(),
     };
   }
 
   public toPlain(): z.infer<typeof MutableGraphMetaData.schema> {
     return {
       labels: this.labels.map((v) => v.toPlain()).toRecord(),
+      scenarioInfo: this.scenarioInfo.toPlain(),
     };
   }
 }
